requested changes part 1